# bridgeboard-pc-boot-patcher

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: create-release-tag.yml  post-merge.yml  release.yml  run-tests.yml
src/: cli.rs  file_handler.rs  main.rs  option_rom.rs  option_rom_patcher.rs  test_helpers.rs
src/commands/: mod.rs  process.rs  validate.rs  write_rom.rs
tests/fixtures/: 8k-option-rom  pc.boot.8k-appended  pc.boot.8k-at-end  pc.boot.8k-at-start  pc.boot.8k-beyond-end  pc.boot.8k-in-middle  pc.boot.8k-overlapping-end  pc.boot.header_too_late  pc.boot.invalid_checksum  pc.boot.no-rom  pc.boot.no_header  pc.boot.valid
working-pc-boot/: pc.boot
