[package]
name = "bridgeboard-pc-boot-patcher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
clap-num = "1"

[dev-dependencies]
md5 = "0.7"
tempfile = "3"
